refactor: LottoMachine 책임 분할